--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
+    "daisyui": "^4.12.12",
     "next": "14.2.10",
     "nodemailer": "^6.9.15",
     "react": "^18",
