--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.9",
     "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "daisyui": "^4.12.12",
