--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "eslint": "^8",
