--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.9",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.0",
     "daisyui": "^4.12.12",
+    "lucide-react": "^0.460.0",
     "next": "14.2.10",
     "nodemailer": "^6.9.15",
     "react": "^18",
