--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "daisyui": "^4.12.12",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.10",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "eslint": "^8",
